--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@300;400;500;600&family=Crimson+Text:wght@400;600;700&family=Kanit:wght@300;400&family=Libre+Baskerville:wght@400;700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,400&family=Roboto:wght@300;400&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <title>Jack Leyland - Developer</title>
